--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@ figure {
         <hr>
         <center><img width="100%" src="./image/pipeline.png" style="margin-top: 20px; margin-bottom: 3px;"></center>
         <p class="caption">
-            The overall pipeline of 4DRGS. We model vessels as a set of 4D radiative Gaussian kernels and optimize them with image losses. 3D vessel volume is reconstructed via attenuation voxelization.
+            The overall pipeline of 4DRGS. (a) We model vessels as a set of 4D radiative Gaussian kernels and (b) optimize them with image losses. (c) 3D vessel volume is reconstructed via attenuation voxelization.
         </p><p class="caption">
         <div class="flex-row">
             <p>4DRGS.<p>
