--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ figure {
         <div class="author-row">
             <div class="col-5 text-center"><a href="https://zhentao-liu.github.io/">Zhentao Liu</a><sup>1</sup></div>
             <div class="col-5 text-center"><a href="https://ruyi-zha.github.io/">Ruyi Zha</a><sup>2</sup></div>
-            <div class="col-5 text-center"><a >Huangxuan Zhao</a><sup>3</sup></div>
+            <div class="col-5 text-center">Huangxuan Zhao</a><sup>3</sup></div>
             <div class="col-5 text-center"><a href="https://users.cecs.anu.edu.au/~hongdong/">Hongdong Li</a><sup>2</sup></div>
             <div class="col-5 text-center"><a href="https://shanghaitech-impact.github.io/">Zhiming Cui</a><sup>1</sup></div>
         </div> 
