--- a/index.html
+++ b/index.html
@@ -266,7 +266,8 @@ figure {
             (b) We model vessels as a set of 4D radiative Gaussians. (c) The final 3D vessel volume is reconstructed via attenuation voxelization.
         </p><p class="caption">
         <div class="flex-row">
-            <p>Reconstructing 3D vessel structures from sparse-view dynamic digital subtraction angiography (DSA) images enables accurate medical assessment while reducing radiation exposure. 
+            <p> 
+                Reconstructing 3D vessel structures from sparse-view dynamic digital subtraction angiography (DSA) images enables accurate medical assessment while reducing radiation exposure. 
                 Existing methods often produce suboptimal results or require excessive computation time. 
                 In this work, we propose 4D radiative Gaussian splatting (4DRGS) to achieve high-quality reconstruction efficiently. 
                 In detail, we represent the vessels with 4D radiative Gaussian kernels. 
@@ -276,10 +277,39 @@ figure {
                 The final 3D vessel volume is voxelized from the well-trained kernels. 
                 Moreover, we introduce accumulated attenuation pruning and bounded scaling activation to improve reconstruction quality. 
                 Extensive experiments on real-world patient data demonstrate that 4DRGS achieves impressive results in 5 minutes training, which is 32x faster than the state-of-the-art method. 
-                This underscores the potential of 4DRGS for real-world clinics.<p>
+                This underscores the potential of 4DRGS for real-world clinics.
+            <p>
         </div>
     </section>
 
+    <section id="DSA Imaging"/>
+        <h2>Training Progress</h2>
+        <hr>
+        <center>
+            <video width="100%" controls style="margin-top: 20px; margin-bottom: 3px;">
+                <source src="./image/DSAimaging" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+        </center>
+        <p class="caption">
+            DSA imaging with mask run (left), fill run (middle), and DSA sequence (right).
+        </p><p class="caption">
+        <div class="flex-row">
+            <p> 
+                Digital subtraction angiography (DSA) is a widely recognized gold standard for diagnosing vascular diseases. 
+                DSA imaging involves two rotational cone-beam X-ray scans: the mask run, performed before the contrast agent injection, and the fill run, performed after the injection. 
+                Subtracting X-ray images in the fill run from those in the mask run yields 2D DSA images, 
+                which highlight blood flow marked by the contrast agent while removing background tissues.
+                However, significant vessel overlap in DSA images hinders accurate anatomical assessment.
+                Therefore, reconstructing 3D vessel structures from DSA images is essential for clear visualization to support medical diagnosis.
+                Existing DSA systems typically capture hundreds of images (133 in our study) for precise reconstruction based on the Feldkamp-Davis-Kress (FDK) algorithm, 
+                exposing patients and radiographers to significant radiation.
+                In this work, we aim to achieve high-quality reconstruction efficiently with dozens of images to reduce radiation exposure.
+            <p>
+        </div>
+    </section>
+
+    
     <section id="Methodology"/>
         <h2>Methodology</h2>
         <hr>
@@ -289,7 +319,8 @@ figure {
             (c) 3D vessel volume is reconstructed via attenuation voxelization.
         </p><p class="caption">
         <div class="flex-row">
-            <p>A key observation is that vessels maintain static structures during DSA scanning process, while their attenuation varies over time due to the contrast agent flow. 
+            <p>
+                A key observation is that vessels maintain static structures during DSA scanning process, while their attenuation varies over time due to the contrast agent flow. 
                 Therefore, we represent vessels as a set of 4D radiative Gaussian kernels, where each kernel acts as a local Gaussian-shaped time-varying attenuation distribution. 
                 The static vessel structures are modeled with time-invariant geometry parameters, including position, rotation, and scale. 
                 To mimic the temporal attenuation changes, we introduce a compact neural network dubbed dynamic neural attenuation field (DNAF). 
@@ -315,7 +346,7 @@ figure {
             </video>
         </center>
         <p class="caption">
-            Training progress visualization on kernel positions. The model is trained for 30k iterations. Adaptive control runs from 600 to 15k iterations, adjusting every 200 iterations.
+            Training progress visualization on Gaussian kernel positions. The model is trained for 30k iterations. Adaptive control runs from 600 to 15k iterations, adjusting every 200 iterations.
         </p><p class="caption">
     </section>
 
