--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@ figure {
         <hr>
         <center>
             <video width="100%" controls style="margin-top: 20px; margin-bottom: 3px;">
-                <source src="./image/DSAimaging" type="video/mp4">
+                <source src="./image/DSAimaging.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </center>
