--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@ figure {
             3D vessel reconstruction of different methods with CD(mm)/HD(mm) values shown at the top right of each image.
         </p><p class="caption">
             
-        <center><img width="100%" src="./image/2dresults" style="margin-top: 20px; margin-bottom: 3px;"></center>
+        <center><img width="100%" src="./image/2dresults.png" style="margin-top: 20px; margin-bottom: 3px;"></center>
         <p class="caption">
             2D DSA image synthesis of different methods at test frames.
             PSNR(dB)/SSIM values averaged over the test set are shown at the top right of each image.
