--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@ figure {
     </section>
 
     <section id="DSA Imaging"/>
-        <h2>Training Progress</h2>
+        <h2>DSA Imaging</h2>
         <hr>
         <center>
             <video width="100%" controls style="margin-top: 20px; margin-bottom: 3px;">
@@ -361,13 +361,13 @@ figure {
         </p><p class="caption">
         <center><img width="100%" src="./image/3dresults.png" style="margin-top: 20px; margin-bottom: 3px;"></center>
         <p class="caption">
-            3D vessel reconstruction of different methods with CD(mm)/HD(mm) values shown at the top right of each image.
+            3D vessel reconstruction of different methods with CD(mm)/HD(mm) values shown at the top right of each image. Refer to our paper for clear visualization.
         </p><p class="caption">
             
         <center><img width="100%" src="./image/2dresults.png" style="margin-top: 20px; margin-bottom: 3px;"></center>
         <p class="caption">
             2D DSA image synthesis of different methods at test frames.
-            PSNR(dB)/SSIM values averaged over the test set are shown at the top right of each image.
+            PSNR(dB)/SSIM values averaged over the test set are shown at the top right of each image. Refer to our paper for clear visualization.
         </p><p class="caption">
 
     </section>
