--- a/index.html
+++ b/index.html
@@ -320,6 +320,7 @@ figure {
         </p><p class="caption">
         <div class="flex-row">
             <p>
+                In this paper, we introduce 4D radiative Gaussian splatting (4DRGS), the first Gaussian splatting-based framework for efficient 3D vessel reconstruction from sparse-view dynamic DSA images.
                 A key observation is that vessels maintain static structures during DSA scanning process, while their attenuation varies over time due to the contrast agent flow. 
                 Therefore, we represent vessels as a set of 4D radiative Gaussian kernels, where each kernel acts as a local Gaussian-shaped time-varying attenuation distribution. 
                 The static vessel structures are modeled with time-invariant geometry parameters, including position, rotation, and scale. 
@@ -376,12 +377,14 @@ figure {
 <!--     <section id="bibtex">
         <h2>Citation</h2>
         <hr>
-        <pre><code>@ARTICLE{SVCT,
-          author={Liu, Zhentao and Fang, Yu and Li, Changjian and Wu, Han and Liu, Yuan and Shen, Dinggang and Cui, Zhiming},
-          journal={IEEE Transactions on Medical Imaging}, 
-          title={Geometry-Aware Attenuation Learning for Sparse-View CBCT Reconstruction}, 
-          year={2024},
-          doi={10.1109/TMI.2024.3473970}
-      }
+        <pre><code>
+            @ARTICLE{
+                    SVCT,
+                    author={Liu, Zhentao and Fang, Yu and Li, Changjian and Wu, Han and Liu, Yuan and Shen, Dinggang and Cui, Zhiming},
+                    journal={IEEE Transactions on Medical Imaging}, 
+                    title={Geometry-Aware Attenuation Learning for Sparse-View CBCT Reconstruction}, 
+                    year={2024},
+                    doi={10.1109/TMI.2024.3473970}
+                  }
         </code></pre>
     </section> -->
