--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ figure {
         <br>
         <div style="clear: both">
             <div class="paper-btn-parent">
-            <a class="paper-btn">
+            <a class="paper-btn" href="https://arxiv.org/abs/2412.12919">
                 <span class="material-icons"></span> 
                  Arxiv
             </a>
