--- a/index.html
+++ b/index.html
@@ -374,17 +374,15 @@ figure {
     </section>
 
     
-<!--     <section id="bibtex">
+    <section id="bibtex">
         <h2>Citation</h2>
         <hr>
         <pre><code>
-            @ARTICLE{
-                    SVCT,
-                    author={Liu, Zhentao and Fang, Yu and Li, Changjian and Wu, Han and Liu, Yuan and Shen, Dinggang and Cui, Zhiming},
-                    journal={IEEE Transactions on Medical Imaging}, 
-                    title={Geometry-Aware Attenuation Learning for Sparse-View CBCT Reconstruction}, 
-                    year={2024},
-                    doi={10.1109/TMI.2024.3473970}
-                  }
+            @article{4DRGS,
+              title={4DRGS: 4D Radiative Gaussian Splatting for Efficient 3D Vessel Reconstruction from Sparse-View Dynamic DSA Images},
+              author={Liu, Zhentao and Zha, Ruyi and Zhao, Huangxuan and Li, Hongdong and Cui, Zhiming},
+              journal={arXiv preprint arXiv:2412.12919},
+              year={2024}
+            }
         </code></pre>
-    </section> -->
+    </section>
