--- a/index.html
+++ b/index.html
@@ -377,12 +377,11 @@ figure {
     <section id="bibtex">
         <h2>Citation</h2>
         <hr>
-        <pre><code>
-            @article{4DRGS,
-              title={4DRGS: 4D Radiative Gaussian Splatting for Efficient 3D Vessel Reconstruction from Sparse-View Dynamic DSA Images},
-              author={Liu, Zhentao and Zha, Ruyi and Zhao, Huangxuan and Li, Hongdong and Cui, Zhiming},
-              journal={arXiv preprint arXiv:2412.12919},
-              year={2024}
-            }
+        <pre><code>@article{4DRGS,
+          title={4DRGS: 4D Radiative Gaussian Splatting for Efficient 3D Vessel Reconstruction from Sparse-View Dynamic DSA Images},
+          author={Liu, Zhentao and Zha, Ruyi and Zhao, Huangxuan and Li, Hongdong and Cui, Zhiming},
+          journal={arXiv preprint arXiv:2412.12919},
+          year={2024}
+        }
         </code></pre>
     </section>
