--- a/index.html
+++ b/index.html
@@ -352,8 +352,8 @@ figure {
         </p><p class="caption">
     </section>
 
-    <section id="results"/>
-        <h2>Results</h2>
+    <section id="Experiment Results"/>
+        <h2>Experiment Results</h2>
         <hr>
         
         <center><img width="100%" src="./image/tabresults.png" style="margin-top: 20px; margin-bottom: 3px;"></center>
@@ -369,6 +369,16 @@ figure {
         <p class="caption">
             2D DSA image synthesis of different methods at test frames.
             PSNR(dB)/SSIM values averaged over the test set are shown at the top right of each image. Refer to our paper for clear visualization.
+        </p><p class="caption">
+
+        <center>
+            <video width="100%" controls style="margin-top: 20px; margin-bottom: 3px;">
+                <source src="./image/case2V30_proj_comparison.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+        </center>
+        <p class="caption">
+            Multi-view rendering with different methods. Trained on case #2 with 30 input views.
         </p><p class="caption">
 
     </section>
