--- a/index.html
+++ b/index.html
@@ -371,6 +371,21 @@ figure {
             PSNR(dB)/SSIM values averaged over the test set are shown at the top right of each image. Refer to our paper for clear visualization.
         </p>
 
+<!--         <center>
+            <video width="100%" controls style="margin-top: 20px; margin-bottom: 3px;">
+                <source src="./image/case2V30_proj_comparison.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+        </center>
+        <p class="caption">
+            Multi-view rendering with different methods. Trained on case #2 with 30 input views.
+        </p> -->
+
+    </section>
+
+    <section id="Multi-view Rendering"/>
+        <h2>Multi-view Rendering</h2>
+        <hr>
         <center>
             <video width="100%" controls style="margin-top: 20px; margin-bottom: 3px;">
                 <source src="./image/case2V30_proj_comparison.mp4" type="video/mp4">
@@ -380,7 +395,6 @@ figure {
         <p class="caption">
             Multi-view rendering with different methods. Trained on case #2 with 30 input views.
         </p>
-
     </section>
 
     
