--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@ figure {
         <hr>
         <center>
             <video width="100%" controls style="margin-top: 20px; margin-bottom: 3px;">
-                <source src="./image/case2V30_proj_comparison.mp4" type="video/mp4">
+                <source src="./image/MVrender.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </center>
