--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@ figure {
         </p>
     </section>
 
-    <section id="Experiment Results"/>
+<!--     <section id="Experiment Results"/>
         <h2>Experiment Results</h2>
         <hr>
         
@@ -371,29 +371,25 @@ figure {
             PSNR(dB)/SSIM values averaged over the test set are shown at the top right of each image. Refer to our paper for clear visualization.
         </p>
 
-<!--         <center>
-            <video width="100%" controls style="margin-top: 20px; margin-bottom: 3px;">
-                <source src="./image/case2V30_proj_comparison.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
-        </center>
-        <p class="caption">
-            Multi-view rendering with different methods. Trained on case #2 with 30 input views.
-        </p> -->
+    </section> -->
 
-    </section>
-
-    <section id="Multi-view Rendering"/>
-        <h2>Multi-view Rendering</h2>
+    <section id="2D">
+        <h2>2D DSA Image Synthesis</h2>
         <hr>
+    
         <center>
-            <video width="100%" controls style="margin-top: 20px; margin-bottom: 3px;">
-                <source src="./image/MVrender.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
+            <img src="./image/case1_V30_proj.gif" width="100%" style="margin-top: 20px; margin-bottom: 3px;">
         </center>
         <p class="caption">
-            Multi-view rendering with different methods. Trained on case #2 with 30 input views.
+            2D DSA image synthesis on case #1 with 30 training views.
+        </p>
+
+
+        <center>
+            <img src="./image/case2_V40_proj.gif" width="100%" style="margin-top: 20px; margin-bottom: 3px;">
+        </center>
+        <p class="caption">
+            2D DSA image synthesis on case #2 with 40 training views.
         </p>
     </section>
 
