--- a/index.html
+++ b/index.html
@@ -386,10 +386,7 @@ figure {
  -->
 
         <center>
-            <video width="100%" controls style="margin-top: 20px; margin-bottom: 3px;">
-                <source src="./image/case2_V40_proj.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
+            <img src="./image/case2_V40_proj_c.gif" width="100%" style="margin-top: 20px; margin-bottom: 3px;">
         </center>
         <p class="caption">
             2D DSA image synthesis on case #2 with 40 training views.
