--- a/index.html
+++ b/index.html
@@ -377,13 +377,13 @@ figure {
         <h2>2D DSA Image Synthesis</h2>
         <hr>
     
-<!--         <center>
-            <img src="./image/case1_V30_proj.gif" width="100%" style="margin-top: 20px; margin-bottom: 3px;">
+        <center>
+            <img src="./image/case1_V30_proj_c.gif" width="100%" style="margin-top: 20px; margin-bottom: 3px;">
         </center>
         <p class="caption">
             2D DSA image synthesis on case #1 with 30 training views.
         </p>
- -->
+
 
         <center>
             <img src="./image/case2_V40_proj_c.gif" width="100%" style="margin-top: 20px; margin-bottom: 3px;">
