--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ figure {
  <body>
 <div class="container">
     <div class="paper-title">
-      <h1>4DRGS: 4D Radiative Gaussian Splatting for Efficient 3D Vessel Reconstruction from <br> Sparse-View Dynamic DSA Images</h1>
+      <h1>4DRGS: 4D Radiative Gaussian Splatting <br> for Efficient 3D Vessel Reconstruction from <br> Sparse-View Dynamic DSA Images</h1>
     </div>
 
     <div id="authors">
