--- a/index.html
+++ b/index.html
@@ -378,14 +378,14 @@ figure {
             <img src="./image/case1_V30_proj_c.gif" width="100%" style="margin-top: 20px; margin-bottom: 3px;">
         </center>
         <p class="caption">
-            2D DSA image synthesis on case #1 with 30 training views. Adjusted image contrast for better visualization.
+            2D DSA image synthesis on case #1 with 30 training views.
         </p>
 
         <center>
             <img src="./image/case2_V40_proj_c.gif" width="100%" style="margin-top: 20px; margin-bottom: 3px;">
         </center>
         <p class="caption">
-            2D DSA image synthesis on case #2 with 40 training views. Adjusted image contrast for better visualization.
+            2D DSA image synthesis on case #2 with 40 training views.
         </p>
         
     </section>
