--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@ figure {
             </tr>
             </table>
         </center>
-
+            <div class="col-5 text-center">IPMI 2025</div>
         </center>
         <br>
         
