--- a/index.html
+++ b/index.html
@@ -207,6 +207,9 @@ figure {
     <div class="paper-title">
       <h1>4DRGS: 4D Radiative Gaussian Splatting <br> for Efficient 3D Vessel Reconstruction from <br> Sparse-View Dynamic DSA Images</h1>
     </div>
+    <div class="column is-full_width">
+      <h2 class="title is-4">IPMI 2025</h2>
+    </div>
 
     <div id="authors">
     	<center>
@@ -236,7 +239,7 @@ figure {
             </tr>
             </table>
         </center>
-            <div class="col-5 text-center">IPMI 2025</div>
+            
         </center>
         <br>
         
