--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ figure {
       <h1>4DRGS: 4D Radiative Gaussian Splatting <br> for Efficient 3D Vessel Reconstruction from <br> Sparse-View Dynamic DSA Images</h1>
     </div>
     <div class="column is-full_width">
-      <h2 class="title is-4">IPMI 2025</h2>
+      <h2 class="title is-4">IPMI 2025 Oral</h2>
     </div>
 
     <div id="authors">
