--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ figure {
                     <span style="font-size:20px"><sup>1</sup>School of Biomedical Engineering & State Key Laboratory of Advanced Medical Materials and Devices, ShanghaiTech University, Shanghai, China</span>
                 </div>
                 <div class="col-1 text-center">
-                    <span style="font-size:20px"><sup>2</sup>Australian National University, Canberra, Australia</span>
+                    <span style="font-size:20px"><sup>2</sup>School of Computing, Australian National University, Canberra, Australia</span>
                 </div>
                 <div class="col-1 text-center">
                     <span style="font-size:20px"><sup>3</sup>School of Computer Science, Wuhan University, Wuhan, China</span>
